--- a/content/panorama/styles/custom_game/incidents.css
+++ b/content/panorama/styles/custom_game/incidents.css
@@ -36,3 +36,27 @@
     font-size: 19;
     background-color: gradient(linear, 130% 0%, 0% 130%, from(rgba(0,0,0,0.05)), color-stop(0.5, rgba(0,0,0,0.5)), to(rgba(0,0,0,0.05)));
 }
+
+#Incident #TooltipDummy,
+#Incident #TooltipContainer {
+    horizontal-align: right;
+    height: 100%;
+    overflow: noclip;
+}
+
+#Incident #TooltipDummy #Tooltip {
+    opacity: 0;
+}
+
+#Incident #TooltipDummy:hover #Tooltip {
+    opacity: 1;
+    color: white;
+    font-family: Arial;
+    font-size: 19;
+    align: right bottom;
+    transform: translate3d(-90%, 100%, 0px);
+    max-width: 350px;
+    padding: 20px 10px;
+    border: 2px solid #616c7b;
+    background-color: #15191e;
+}
