Add incident hover arrow
Known bugs:

 - Arrow displays incorrectly for 1 frame when hovering on

 - Arrow incorrectly detaches from target when moving camera away

--- a/content/panorama/styles/custom_game/incidents.css
+++ b/content/panorama/styles/custom_game/incidents.css
@@ -87,3 +87,17 @@
 #TooltipLarge > TextButton:hover {
     color: yellow;
 }
+
+/*----------------------------------------------------------------------------*/
+
+#Arrow {
+    opacity: 0;
+    height: 50px;
+    width: 50px;
+}
+
+#Arrow:enabled {
+    opacity: 1;
+    transition-property: transform;
+    transition-duration: 0.01s;
+}
