Improve UI and letter glow style

--- a/content/panorama/styles/custom_game/incidents.css
+++ b/content/panorama/styles/custom_game/incidents.css
@@ -1,5 +1,5 @@
 @define font-color: white;
-@define font-size: 19px;
+@define font-size: 17px;
 @define font-family: Arial;
 @define lGrey: #616c7b;
 @define dGrey: #15191e;
@@ -77,7 +77,7 @@
 
 #Incident.Init {
     animation-name: dropin;
-    animation-duration: 2s;
+    animation-duration: 1.5s;
 }
 
 #Incident.Bounce {
@@ -91,7 +91,7 @@
 
 #Incident > Label {
     align: middle middle;
-    color: font-color;
+    color: #e3e3e3;
     font-family: font-family;
     font-size: font-size;
     background-color: gradient(linear, 130% 0%, 0% 130%, from(rgba(0,0,0,0.05)), color-stop(0.5, rgba(0,0,0,0.5)), to(rgba(0,0,0,0.05)));
@@ -147,8 +147,8 @@
     color: font-color;
     font-family: font-family;
     font-size: font-size;
-    max-width: 350px;
-    padding: 20px 10px;
+    max-width: 400px;
+    padding: 15px 10px;
     border: 2px solid lGrey;
     border-right: 1px solid lGrey;
     background-color: dGrey;
