--- a/content/panorama/styles/custom_game/incidents.css
+++ b/content/panorama/styles/custom_game/incidents.css
@@ -49,7 +49,7 @@
 
 #Container {
     horizontal-align: right;
-    height: 70%;
+    height: 85%;
     width: 100%;
     flow-children: up;
 }
@@ -57,7 +57,6 @@
 #Problems {
     horizontal-align: right;
     width: 100%;
-    margin-bottom: 10px;
     flow-children: down;
 }
 
@@ -67,6 +66,30 @@
     padding-top: dropHeight; /* Fixes animation playing outside parent */
     margin-top: -dropHeight; /*                                        */
     flow-children: down;
+}
+
+#Forecast {
+    horizontal-align: right;
+    width: 210px;
+    padding: 5px 10px 5px 0px;
+    text-align: right;
+    font-family: font-family;
+    font-size: font-size;
+    color: white;
+}
+
+#Date {
+    horizontal-align: right;
+    padding: -5px 10px 0px 0px;
+    line-height: 30px;
+    text-align: right;
+    font-family: font-family;
+    font-size: font-size;
+    color: white;
+}
+
+#Date:hover {
+    background-color: #ffffff10;
 }
 
 /*----------------------------------------------------------------------------*/
